# file-parser-cli

./: README.md  main.py  pyproject.toml
file_parser/: __init__.py  cli.py
